Got BProm from the provider, prepared scripts

--- a/Scripts_Results_Report/get_taxonomic_codes_salmonella.ipynb
+++ b/Scripts_Results_Report/get_taxonomic_codes_salmonella.ipynb
@@ -18,7 +18,33 @@
    "outputs": [],
    "source": [
     "### Import packages ###\n",
-    "import os"
+    "import os\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### Remove the duplicates from the metadata ####\n",
+    "\n",
+    "# Read the metadata file\n",
+    "pathMetadata = ''\n",
+    "metadata = pd.read_csv(pathMetadata, sep='\\t')\n",
+    "\n",
+    "# Read the list of duplicates\n",
+    "pathDuplicates = ''\n",
+    "with open(pathDuplicates, 'r') as f:\n",
+    "    duplicates = f.readlines()\n",
+    "\n",
+    "# Remove the duplicates\n",
+    "metadata = metadata[~metadata['accession'].isin(duplicates)]\n",
+    "\n",
+    "# Save the metadata without duplicates\n",
+    "out = ''\n",
+    "metadata.to_csv(pathMetadata, sep=',', index=False)"
    ]
   },
   {
